index.html changed

--- a/config.yaml
+++ b/config.yaml
@@ -32,7 +32,7 @@ params:
   profile_image: /images/profile.png
   name: "Parag Jadhav"
   namecolor: ffc107
-  profession: "Data Scientist and Data Analyst @ https://digitalchargingsolutions.com/web/dcs-global"
+  profession: "Data Scientist and Data Analyst @Digital Charging Solutions GmbH"
   github: "https://github.com/paragj30/"
   linkedin: "https://www.linkedin.com/in/parag-jadhav-429026146/"
   twitter: "https://twitter.com/ParagJa44/"
